# 2025-nsf-pose

./: .gitignore  404.html  README.html  README.md  foa.html  index.html  mkdocs.yml  myst.yml  official_resources.md  pyproject.toml
.github/workflows/: deploy_mkdocs.yml  deploy_myst_docs.yml
_build/exports/: project-description.doc
_build/logs/: myst.build.json
_build/site/: config.json  myst.xref.json  objects.inv
docs/: index.md
docs/document-proper/: 2024-freemocap-nsf-pose-outline.md  formatting-notes.md  generic-project-description-outline.md  project-description-outline.md  proposal-checklist.md
docs/notes/: key-words-and-phrases-from-foa.md  proposal-outline.md
document/: header.tex  main.tex  main_freemocap-nsf-pose-2024.tex  main_freemocap_nsf_pose_2024.tex  project-description.md  project-summary.md  references.bib
document-proper/: 2024-freemocap-nsf-pose-abridged-outline.md  2024-freemocap-nsf-pose-outline.md  proposal-checklist.md
document-proper/2024-freemocap-nsf-pose-abridged-outline/: index.html
document-proper/2024-freemocap-nsf-pose-outline/: index.html
document-proper/formatting-notes/: index.html
document-proper/proposal-checklist/: index.html
document/body/: body.tex
document/header/: main_header.tex
document/project-description/: project-description.tex
formatting-notes/: formatting-notes.md
notes/: index.md  official_resources.md  pose-youtube-video.md
proposal-components/: project-description.tex  references.bib
proposal-proper/: project-description.md
search/: search_index.json
(+46 files in other folders)
